reviw table reactive

--- a/web/cader/src/app/auth/controllership/expense/expense-view/expense-payment/expense-payment.component.html
+++ b/web/cader/src/app/auth/controllership/expense/expense-view/expense-payment/expense-payment.component.html
@@ -18,4 +18,5 @@
     ></btn-primary>
   </div>
 </div>
+<dataTable></dataTable>
 <data-table [data]="listPayments" [header]="header" [atributos]="atributos" />
