new data table parte 1

--- a/web/cader/src/app/auth/controllership/expense/expense-view/expense-view.component.html
+++ b/web/cader/src/app/auth/controllership/expense/expense-view/expense-view.component.html
@@ -6,6 +6,7 @@
     <expense-payment
       [listPayments]="listPayments"
       [isDisabled]="!isDisabled"
+      [dataTableServicePaymentys]="dataTableServicePaymentys"
     ></expense-payment>
   </div>
 </abas-tab>
