new data table parte 2

--- a/web/cader/src/app/auth/controllership/expense/expense-view/expense-payment/expense-payment.component.html
+++ b/web/cader/src/app/auth/controllership/expense/expense-view/expense-payment/expense-payment.component.html
@@ -18,5 +18,9 @@
     ></btn-primary>
   </div>
 </div>
-<dataTable [dataTableObs]="dataTableServicePaymentys"></dataTable>
+<dataTable
+  [dataTableObs]="dataTableServicePaymentys"
+  [header]="header"
+  [atributos]="atributos"
+></dataTable>
 <data-table [data]="listPayments" [header]="header" [atributos]="atributos" />
