new Table parte 3

--- a/web/cader/src/app/auth/controllership/expense/expense-view/expense-payment/expense-payment.component.html
+++ b/web/cader/src/app/auth/controllership/expense/expense-view/expense-payment/expense-payment.component.html
@@ -18,9 +18,10 @@
     ></btn-primary>
   </div>
 </div>
-<dataTable
-  [dataTableObs]="dataTableServicePaymentys"
-  [header]="header"
-  [atributos]="atributos"
-></dataTable>
-<data-table [data]="listPayments" [header]="header" [atributos]="atributos" />
+<div class="tablePayments">
+  <dataTable
+    [dataTableObs]="dataTableServicePaymentys"
+    [header]="header"
+    [atributos]="atributos"
+  ></dataTable>
+</div>
