new data table parte 4

--- a/web/cader/src/app/auth/controllership/expense/expense-view/expense-payment/expense-payment.component.html
+++ b/web/cader/src/app/auth/controllership/expense/expense-view/expense-payment/expense-payment.component.html
@@ -20,6 +20,7 @@
 </div>
 <div class="tablePayments">
   <dataTable
+    [data]="listPayments"
     [dataTableObs]="dataTableServicePaymentys"
     [header]="header"
     [atributos]="atributos"
