--- a/web/cader/src/app/auth/controllership/movement/movement-list/movement-list.component.html
+++ b/web/cader/src/app/auth/controllership/movement/movement-list/movement-list.component.html
@@ -1,6 +1,9 @@
 <model-filter>
   <movement-filter></movement-filter>
 </model-filter>
-<div *ngIf="loading">
-  <data-table [data]="list" [header]="header" [atributos]="atributos" />
-</div>
+<dataTable
+  [data]="list"
+  [dataTableObs]="dataTableObserve"
+  [header]="header"
+  [atributos]="atributos"
+></dataTable>
