--- a/web/cader/src/app/auth/register/payment-type/payment-type-list/payment-type-list.component.html
+++ b/web/cader/src/app/auth/register/payment-type/payment-type-list/payment-type-list.component.html
@@ -1,3 +1,6 @@
-<div *ngIf="loading">
-  <data-table [data]="list" [header]="header" [atributos]="atributos" />
-</div>
+<dataTable
+  [data]="list"
+  [dataTableObs]="dataTableObserve"
+  [header]="header"
+  [atributos]="atributos"
+></dataTable>
