--- a/web/cader/src/app/auth/controllership/expense/expense-view/expense-detail/expense-detail.component.html
+++ b/web/cader/src/app/auth/controllership/expense/expense-view/expense-detail/expense-detail.component.html
@@ -41,11 +41,11 @@
       [isDisabled]="isDisabled"
     ></inputDate>
     <inputReais
-      formControlName="value"
+      formControlName="openValue"
       [label]="'Valor Aberto'"
       [isDisabled]="true"
     /><inputReais
-      formControlName="value"
+      formControlName="amountPaid"
       [label]="'Valor Pago'"
       [isDisabled]="true"
     /><inputReais
