--- a/web/cader/src/app/components/custom/input-reais/input-reais.component.html
+++ b/web/cader/src/app/components/custom/input-reais/input-reais.component.html
@@ -1,6 +1,7 @@
 <div class="choose-quantity"></div>
 <span class="p-float-label">
   <input
+    twoDecimalMask
     class="inputReais"
     pInputText
     type="text"
