--- a/web/cader/src/app/auth/controllership/cashinflow/cash-inflow-list/cash-inflow-list.component.html
+++ b/web/cader/src/app/auth/controllership/cashinflow/cash-inflow-list/cash-inflow-list.component.html
@@ -4,4 +4,6 @@
   [header]="header"
   [atributos]="atributos"
 ></dataTable>
-<model-filter> </model-filter>
+<model-filter>
+  <cash-inflow-filter></cash-inflow-filter>
+</model-filter>
