--- a/mobile/cader-mobile/src/styles/margins.scss
+++ b/mobile/cader-mobile/src/styles/margins.scss
@@ -4,6 +4,10 @@
 .mt2 {
 	margin-top: 2rem;
 }
+
+.mb2 {
+	margin-bottom: 2rem;
+}
 .mt3 {
 	margin-top: 3rem;
 }
@@ -14,4 +18,20 @@
 
 .mt7 {
 	margin-top: 7rem;
+}
+
+// padding horizontal
+.mh1 {
+	margin-left: 1rem;
+	margin-right: 1rem;
+}
+
+.mh2 {
+	margin-left: 2rem;
+	margin-right: 2rem;
+}
+
+.mh3 {
+	margin-left: 3rem;
+	margin-right: 3rem;
 }
