salvar compra cartão mobile

--- a/mobile/cader-mobile/src/styles/margins.scss
+++ b/mobile/cader-mobile/src/styles/margins.scss
@@ -35,3 +35,18 @@
 	margin-left: 3rem;
 	margin-right: 3rem;
 }
+
+.mv1 {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+
+.mv2 {
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+}
+
+.mv3 {
+	margin-top: 3rem;
+	margin-bottom: 3rem;
+}
