--- a/mobile/cader-mobile/src/components/menu/style.scss
+++ b/mobile/cader-mobile/src/components/menu/style.scss
@@ -1,3 +1,11 @@
-.inputText {
-	padding: 3px;
+.menuBarr {
+	background-color: rgb(0, 132, 255);
+	color: #fff;
+}
+
+.btnIconMenu {
+	background: none;
+	border: none;
+	color: #fff;
+	padding: 0.3rem;
 }
