front end card invoice

--- a/web/cader/src/app/auth/controllership/cardinvoice/card-invoice-list/card-invoice-list.component.html
+++ b/web/cader/src/app/auth/controllership/cardinvoice/card-invoice-list/card-invoice-list.component.html
@@ -5,5 +5,5 @@
   [atributos]="atributos"
 ></dataTable>
 <model-filter>
-  <!-- <cash-inflow-filter></cash-inflow-filter> -->
+  <card-invoice-filter></card-invoice-filter>
 </model-filter>
