--- a/web/cader/src/app/auth/view/view.component.scss
+++ b/web/cader/src/app/auth/view/view.component.scss
@@ -3,4 +3,16 @@
     height: calc(100vh - 4rem);
     overflow-y: scroll;
   }
+
+  .bodyApp::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  .bodyApp::-webkit-scrollbar-thumb {
+    background-color: rgb(132, 188, 224);
+  }
+
+  .bodyApp::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
 }
