--- a/web/cader/src/app/components/custom/data-table/data-table.component.scss
+++ b/web/cader/src/app/components/custom/data-table/data-table.component.scss
@@ -14,4 +14,16 @@
     max-height: calc(100vh - 7rem);
     overflow-y: scroll;
   }
+
+  .bodyTable::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  .bodyTable::-webkit-scrollbar-thumb {
+    background-color: rgb(179, 209, 228);
+  }
+
+  .bodyTable::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
 }
