--- a/web/cader/src/app/components/prime/tree-menu/tree-menu.component.html
+++ b/web/cader/src/app/components/prime/tree-menu/tree-menu.component.html
@@ -1,3 +1,1 @@
-<div class="fullW">
-  <p-panelMenu [model]="items" [style]="{ width: '300px' }"></p-panelMenu>
-</div>
+<p-panelMenu [model]="items"></p-panelMenu>
