--- a/web/cader/src/scss/base/_margin.scss
+++ b/web/cader/src/scss/base/_margin.scss
@@ -1,3 +1,27 @@
+.m1 {
+  margin: 1rem;
+}
+
+.ml1 {
+  margin-left: 1rem;
+}
+
+.mr1 {
+  margin-right: 1rem;
+}
+
+.mt1 {
+  margin-top: 1rem;
+}
+
+.mb1 {
+  margin-bottom: 1rem;
+}
+
+.mX1 {
+  margin: 0 1rem;
+}
+
 .m2 {
   margin: 2rem;
 }
