--- a/web/cader/src/scss/base/_padding.scss
+++ b/web/cader/src/scss/base/_padding.scss
@@ -1,3 +1,31 @@
+.p1 {
+  padding: 1rem;
+}
+
+.pl1 {
+  padding-left: 1rem;
+}
+
+.pr1 {
+  padding-right: 1rem;
+}
+
+.pt1 {
+  padding-top: 1rem;
+}
+
+.pb1 {
+  padding-bottom: 1rem;
+}
+
+.px1 {
+  padding: 0 1rem;
+}
+
+.py1 {
+  padding: 1rem 0;
+}
+
 .p2 {
   padding: 2rem;
 }
@@ -18,8 +46,12 @@
   padding-bottom: 2rem;
 }
 
-.rem2 {
+.px2 {
   padding: 0 2rem;
+}
+
+.py2 {
+  padding: 2rem 0;
 }
 
 .p3 {
