--- a/web/cader/src/app/components/custom/dropdownstr/dropdownstr.component.html
+++ b/web/cader/src/app/components/custom/dropdownstr/dropdownstr.component.html
@@ -7,7 +7,8 @@
       optionLabel="description"
       [style]="{ width: '100%' }"
       [disabled]="isDisabled"
+      (onChange)="change()"
     ></p-dropdown>
-    <label>{{ label }} </label>
+    <label>{{ label }}</label>
   </span>
 </div>
