--- a/web/cader/src/app/auth/dev/bi/create-bi/components/biparameter-item/form-parameter-biview/form-parameter-biview.component.html
+++ b/web/cader/src/app/auth/dev/bi/create-bi/components/biparameter-item/form-parameter-biview/form-parameter-biview.component.html
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div class="defind" *ngIf="typeInput === 3">
-        Formulario com listas persolalizada
+        <defined-parameter-view></defined-parameter-view>
       </div>
     </div>
   </div>
