--- a/web/cader/src/app/auth/dev/bi/create-bi/create-bi.component.html
+++ b/web/cader/src/app/auth/dev/bi/create-bi/create-bi.component.html
@@ -59,13 +59,8 @@
       role="tabpanel"
       aria-labelledby="queryBI-tab"
     >
-      <div class="lineLeft">
-        <div class="divLists m1">
-          <biquery-item [query]="query" />
-        </div>
-        <div class="divForm">
-          <biitem-parametro-view></biitem-parametro-view>
-        </div>
+      <div class="fullW">
+        <biquery-item [query]="query" />
       </div>
     </div>
     <div
