--- a/web/cader/src/app/auth/dev/bi/create-bi/components/biparameter-item/biparameter-item.component.html
+++ b/web/cader/src/app/auth/dev/bi/create-bi/components/biparameter-item/biparameter-item.component.html
@@ -1,5 +1,5 @@
 <div class="itemQuery lineLeft" *ngFor="let p of parameters">
-  <label> {{ p.name }} </label>
+  <label> {{ p.label }} </label>
   <div class="complete">
     <div class="lineLeft toRight">
       <button class="btn btn-primary btnIcon" (click)="itemToView(p)">
