--- a/web/cader/src/app/auth/dev/bi/create-bi/create-bi.component.html
+++ b/web/cader/src/app/auth/dev/bi/create-bi/create-bi.component.html
@@ -60,7 +60,7 @@
       aria-labelledby="queryBI-tab"
     >
       <div class="fullW">
-        <biquery-item [query]="query" />
+        <biquery-item [queryOb]="queryOb" />
       </div>
     </div>
     <div
