--- a/web/cader/src/app/auth/dev/bi/create-bi/components/biparameter-item/form-parameter-biview/form-parameter-biview.component.html
+++ b/web/cader/src/app/auth/dev/bi/create-bi/components/biparameter-item/form-parameter-biview/form-parameter-biview.component.html
@@ -1,10 +1,15 @@
 <div [formGroup]="form">
   <div class="fullW p1">
     <button class="btn btn-success mb2 mr1" (click)="addNew()">Novo</button>
-    <button class="btn btn-primary mb2 mr1" (click)="addParametro()">
+
+    <button *ngIf="this.item" class="btn btn-primary mb2 mr1" (click)="save()">
       Save
     </button>
-    <button class="btn btn-danger mb2" (click)="removeParameter()">
+    <button
+      *ngIf="this.item"
+      class="btn btn-danger mb2"
+      (click)="removeParameter()"
+    >
       Delete
     </button>
     <div class="lineLeft">
@@ -66,7 +71,7 @@
                 <div class="ml1">
                   <check
                     [label]="'Customizado'"
-                    formControlName="customizade"
+                    formControlName="customized"
                     (valueChanged)="checkCustom($event)"
                   ></check>
                 </div>
