--- a/web/cader/src/app/auth/dev/bi/create-bi/components/biparameter-item/form-parameter-biview/form-parameter-biview.component.html
+++ b/web/cader/src/app/auth/dev/bi/create-bi/components/biparameter-item/form-parameter-biview/form-parameter-biview.component.html
@@ -14,7 +14,11 @@
     </button>
     <div class="lineLeft">
       <div class="mr1">
-        <inputText formControlName="name" [label]="'Nome'" />
+        <inputText
+          formControlName="name"
+          [label]="'Nome'"
+          [customValidators]="[validateCustom]"
+        ></inputText>
       </div>
       <div class="mr1">
         <inputText formControlName="key" [label]="'Key'" />
