--- a/web/cader/src/app/components/custom/input-text/input-text.component.html
+++ b/web/cader/src/app/components/custom/input-text/input-text.component.html
@@ -1,13 +1,18 @@
-<div class="choose-quantity"></div>
-<span class="p-float-label">
-  <input
-    pInputText
-    type="text"
-    [placeholder]="placeholder"
-    [disabled]="isDisabled"
-    (keyup)="teclar()"
-    [(ngModel)]="value"
-  />
+<div class="tooltip-container">
+  <span class="p-float-label">
+    <input
+      pInputText
+      type="text"
+      [placeholder]="placeholder"
+      [disabled]="isDisabled"
+      (keyup)="teclar()"
+      [(ngModel)]="value"
+    />
+    <label htmlFor="username">{{ label }}</label>
+  </span>
+</div>
 
-  <label htmlFor="username">{{ label }}</label>
-</span>
+<div *ngIf="hasError" class="container">
+  <div class="trigger">Erro?</div>
+  <div class="tooltip">{{ errorMessage }}</div>
+</div>
